// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KbqMultipleFileUploadComponent with localeConfig input property should use default properties if they not provided with localeConfig 1`] = `
{
  "browseLink": "выберите файлы",
  "browseLinkFolder": "выберите папку",
  "browseLinkFolderMixed": "папку",
  "captionText": "TEST {{ browseLink }}",
  "captionTextForCompactSize": "Перетащите сюда или {{ browseLink }}",
  "captionTextOnlyFolder": "Перетащите сюда или {{ browseLinkFolder }}",
  "captionTextWhenSelected": "Перетащите еще или {{ browseLink }}",
  "captionTextWithFolder": "Перетащите сюда или {{ browseLink }} или {{ browseLinkFolderMixed }}",
  "gridHeaders": {
    "file": "Файл",
    "size": "Размер",
  },
  "title": "Загрузите файлы",
}
`;

exports[`KbqSingleFileUploadComponent with localeConfig input property should use default properties if they not provided with localeConfig 1`] = `
{
  "browseLink": "выберите файл",
  "browseLinkFolder": "выберите папку",
  "browseLinkFolderMixed": "папку",
  "captionText": "TEST {{ browseLink }}",
  "captionTextOnlyFolder": "Перетащите сюда или {{ browseLinkFolder }}",
  "captionTextWithFolder": "Перетащите сюда или {{ browseLink }} или {{ browseLinkFolderMixed }}",
}
`;
